# tarmacview

./: .codacy.yaml  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  INSTALL.md  LICENSE  NOTICE  OPERATIONS.md  README.md  docker-compose.field.yml  docker-compose.yml  harness.config.json  start-field.bat  start-field.sh  start.bat  start.sh  stop.bat  stop.sh
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  alembic.ini  lambda_handler.py  pyproject.toml  requirements-video.txt  requirements.txt
backend/app/: main.py  seed.py
backend/migrations/: env.py
backend/tests/: conftest.py  method_dispatch.py  test_admin.py  test_aggregate_roots.py  test_agl_edge_lights.py  test_agl_glide_slope_tolerance.py  test_agl_ils_harmonization_tolerance.py  test_agl_meht_height.py  test_airport_boundary.py  test_airport_measurements.py  test_airport_measurements_api.py  test_airport_service_package_structure.py  test_airport_surface_pair.py  test_airports.py  test_airports_router_structure.py  test_altitude_audit.py  test_audit_coverage.py  test_audit_log_airport_scope.py  test_auth.py  test_backend_service_decomposition.py  test_backup.py  test_boundary_validator.py  test_buffer_resolver.py  test_camera_presets.py  test_computation_status.py  test_config.py  test_constants.py  test_coordinate_precision.py  test_core_geometry.py  test_drone_media_api.py  test_drone_media_matching.py  test_drone_media_per_inspection.py  test_drone_profiles.py  test_elevation_allow_api_call_sites.py  test_elevation_provider.py  (+109 more)
(+1249 files in other folders)
