[project]
name = "tarmacview-backend"
version = "0.1.0"
description = "Drone Mission Planning Module for Airport Lighting Inspection"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
# migrations/versions is alembic-generated; video_processing is a vendored
# third-party snapshot - lint-cleaned when it's decoupled in phase 2
# (see app/services/video_processing/VENDORED.md)
exclude = ["migrations/versions", "app/services/video_processing"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]

[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/*_test.py", "**/conftest.py"]
